<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">eMedicoz</string>
    <string name="facebook_app_id">202640123616502</string>
    <string name="fb_login_protocol_scheme">fb202640123616502</string>
    <string-array name="Review_Type">
        <item>aaa</item>
        <item>bbb</item>
    </string-array>
    <string name="allcourses">All Courses</string>
    <string name="mycourse">My Courses</string>
    <string name="feeds">Feeds</string>
    <string name="podcast">Podcast</string>
    <string name="specialities">Specialities</string>
    <string name="savedNotes">Bookmarks</string>
    <string name="bookmarks">My Bookmarks</string>
    <string name="cpr">CPR</string>
    <string name="course">Courses</string>
    <string name="feedback">Feedback</string>
    <string name="video">Videos</string>
    <string name="live_classes">Live Courses</string>
    <string name="my_courses">My Courses</string>
    <string name="my_course_detail">My Course Details</string>
    <string name="study">Study</string>
    <string name="all_feed">All</string>
    <string name="expert_feed">Expert Feed</string>
    <string name="with_follow_feed">With Follow Feed</string>
    <string name="appSettings">App Settings</string>
    <string name="logout">Logout</string>
    <string name="logoutMessage">Are you sure you want to logout?</string>
    <string name="deleteMessage">Are you sure, You want to delete this post?</string>
    <string name="deleteReviews">Are you sure, you want to delete this review?</string>
    <string name="finishQuiz">Are you sure you want to submit this test?\nyou can\'t edit once you submit. </string>
    <string name="pauseQuiz">Are you sure you want to pause this test?</string>
    <string name="deleteCourse">Are you sure you want to delete all the content of this Course. </string>
    <string name="choose_image">Choose your image from</string>
    <string name="choose_media">Choose Media</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="submit">SUBMIT</string>
    <string name="verfiy">VERIFY</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="alert">Alert</string>
    <string name="reGrantPermissionMsg">You have denied the required permission. Please grant to proceed further.</string>
    <string name="changepassowrd_new_password">New Password</string>
    <string name="changepassowrd_retype_password">Retype Password</string>
    <string name="enter_phonenumber">Enter your phone number</string>
    <string name="forgetpassword_otp_message">OTP will be sent to your Phone number</string>
    <string name="mobile_no_message">Enter the Phone number that you registered with eMedicoz</string>
    <string name="mobileverification_verificationmessage">Please enter your mobile number for verification</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="signup_referralcode">Enter Referral Code!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="are_you_a_dams_student">Are you a DAMS student?</string>
    <string name="are_you_a_dams_student_verify">Are you a DAMS Student? Verify Here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_with_social_media">Sign Up With Social Media</string>
    <string name="write_your_post_here">Write your post here</string>
    <string name="write_your_feedback_here">Write your feedback here</string>
    <string name="write_your_question_here">"Write your question here"</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="likes">Likes</string>
    <string name="next">NEXT</string>
    <string name="welcome_to_emedicoz">Welcome To eMedicoz</string>
    <string name="choose_section">Choose Section</string>
    <string name="change_password">Change Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="professional_stream">Professional Stream</string>
    <string name="new_post">New Post</string>
    <string name="reward_transaction">Reward Transactions</string>
    <string name="notifications">Notifications</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="add_media">Add Media</string>
    <string name="attach">Attach</string>
    <string name="add_question">Add Question</string>
    <string name="add_tag">Add Tag</string>
    <string name="tag_people">Tag People</string>
    <string name="jsonparsing_error_message">Something went wrong with server</string>
    <string name="internet_error_message">No internet connection found.\n Check your Connection</string>
    <string name="exception_api_error_message">Something went wrong kindly try again</string>
    <string name="you_cannot_add_more_opt">You cannot add more options</string>
    <string name="no_more_opt_to_remov">No options to remove</string>
    <string name="you_cannot_add_more_media">You cannot add other Media</string>
    <string name="suggested_videos">Suggested Videos</string>
    <string name="suggested_courses">Suggested Courses</string>
    <string name="people_you_may_know">People You May Know</string>
    <string name="meet_the_expert">Meet the Experts</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_data_in_daily_challenge">No challenge available for selected date</string>
    <string name="please_select_the_stream">Please select the Stream</string>
    <string name="please_input_title">Please input title of podcast</string>
    <string name="please_input_description">Please input description of podcast</string>
    <string name="please_select_the_subject">Please select the Subject</string>
    <string name="please_select_audio_file">Please select the audio file</string>
    <string name="please_select_thumbnail_image">Please select thumbnail image</string>
    <string name="please_select_the_substream">Please select the Sub Stream</string>
    <string name="please_select_the_specialisation">Please select the Specialisation</string>
    <string name="no_data_changed">No Data Changed</string>
    <string name="no_comments_found">No Comments Found</string>
    <string name="pdf_extension">.pdf</string>
    <string name="doc_extension">.doc</string>
    <string name="xls_extension">.xls</string>
    <string name="file_format_error">This file format is not supported</string>
    <string name="liked_your_post">" liked your post."</string>
    <string name="commented_your_post">" commented on your post."</string>
    <string name="tagged_in_post">" tagged you in the post."</string>
    <string name="tagged_in_comment">" tagged you in the comment."</string>
    <string name="shared_your_post">" shared your post."</string>
    <string name="following_you">" started following you."</string>
    <string name="select_stream">Select Stream</string>
    <string name="select_subject">Select Subject</string>
    <string name="logout_confirmation_message">Do you really want to logout?</string>
    <string name="verifying_your_number_n_we_have_sent_an_otp_on_your_number">Verify your Phone number!\n We have sent an OTP on your registered Phone number</string>
    <string name="description">Description</string>
    <string name="subject">Subject</string>
    <string name="discuss_medical_cases_mcqs"><![CDATA[DISCUSS MEDICAL CASES & MCQs]]></string>
    <string name="demo_screen4_text"><![CDATA[From Xrays, CT scans and ECGs to multiple choice questions for NEETPG & USMLE, eMedicoz helps you discuss relevant medical cases sorted by specialty and at all grades.]]></string>
    <string name="demo_screen3_text">eMedicoz is the simple way to share and discuss clinical images and questions.</string>
    <string name="no_feeds_found">No Feeds Found</string>
    <string name="no_following_found">No Following Found</string>
    <string name="no_followers_found">No Followers Found</string>
    <string name="dams_roll_no">DAMS Roll No.</string>
    <string name="update_app_dialog_title">Update App</string>
    <string name="cart_delete_title">Are you sure want to delete this course from cart?</string>
    <string name="update_app_dialog_message">You are using older version of app.\n Kindly update it from PlayStore</string>
    <string name="enter_your_dams_roll_number">Enter your roll number</string>
    <string name="read_more">Read More</string>
    <string name="instructor">Instructor</string>
    <string name="profile">Profile</string>
    <string name="registration">Registration</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="upload_podcast_image">Upload Podcast Image</string>
    <string name="upload_pan_picture">Upload Pan Card</string>
    <string name="upload_aadhar_picture">Upload Aadhar Card</string>
    <string name="upload_bandoc_picture">Upload Bank Document</string>
    <string name="no_question_with_media">You can’t add question along with the media</string>
    <string name="YOUR_LICENSE_KEY">/JFSZ5yP9bbKb+ASKSmzu2hEcZGmlvLN6lMa/g==</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewAll">View All</string>
    <string name="seeAll">See All</string>
    <string name="seeAll_underline"><u>See All</u></string>
    <string name="addreview">Add Review</string>
    <string name="rating">Rating</string>
    <string name="students">Students</string>
    <string name="profile_view">View Profile</string>
    <string name="leaderboard">My Scorecard</string>
    <string name="no_books_yes">YES</string>
    <string name="no_books_no">NO</string>
    <string name="CPR_subscription">Subscription</string>
    <string name="subscribe">Subscribe</string>
    <string name="my_bookmarks">My Bookmarks</string>
    <string name="franchise_name">Franchise Name</string>
    <string name="session">Session</string>
    <string name="course_group_name">Course Group Name</string>
    <string name="course_list_reg">Course List</string>
    <string name="important_notes">Important Notes :</string>
    <string name="join_affiliate_program">Join Affiliate Program</string>
    <string name="live_courses">Live Courses</string>
    <string name="day_night_mode">Dark Mode</string>
    <string name="invite_n_earn">Invite and Earn</string>
    <string name="rate_us">Rate Us</string>
    <string name="recorde_co">Recorded Courses</string>
    <string name="newsand_articls">News And Articles</string>
    <string name="interact">Interact</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="login_account">Login Account</string>
    <string name="hello">Hello, welcome back to our account</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="get_otp">Get OTP</string>
    <string name="daily_challenge">"Daily Challenge "</string>
    <string name="my_cart">My Cart</string>
    <string name="books">Books</string>
</resources>