<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/sp30"
        android:text="@string/login_account"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/sp20"
        android:alpha=".5"
        android:text="@string/hello"/>

    <LinearLayout
        android:id="@+id/tab_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginTop="@dimen/dp40"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:background="@drawable/bg_grid_login"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp4"
            android:layout_weight="1"
            android:background="@drawable/bg_grid_list"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textColor="@color/color_3c3c3c"
            android:textSize="@dimen/sp15"
            android:visibility="visible" />

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp4"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/gray_8e8e8e"
            android:textSize="@dimen/sp15" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/sp22"
        android:text="@string/enter_your_email"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:text="@string/get_otp"
        android:textColor="@color/white"
        android:textSize="@dimen/sp24"
        android:background="@drawable/drawable_bg_btn_new"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:alpha=".8"
        android:textSize="@dimen/sp22"
        android:text="@string/enter_your_email"/>


</LinearLayout>